# dimos

./: .gitignore  AGENTS.md  NEWREADME.MD  README.md  pr_responses.yaml  pyproject.toml  test_livox_hw.py  uv.lock.REMOVED.git-id
.github/workflows/: ci.yml  docker.yml  pre-merge.yml  tests.yml
.openclaw/: smart_nav_state.json
assets/agent/: prompt_agents2.txt
autoresearch/go2_cpu/: _startup_patch.py  eval.py  optimizations.py  program.md
dimos/: __init__.py  test_no_sections.py
dimos/agents/: agent.py  test_mock_agent.py
dimos/control/: blueprints.py  coordinator.py  hardware_interface.py  orchestrator.py  tick_loop.py
dimos/core/: __init__.py  base_blueprints.py  blueprints.py  daemon.py  global_config.py  module.py  module_coordinator.py  native_echo.py  native_module.py  stream.py  test_blueprints.py  test_core.py  test_daemon.py  test_native_module.py  worker.py  worker_manager.py
dimos/dashboard/: __init__.py  module.py  rerun_blueprint.py  rerun_init.py  rerun_module.py  rerun_tap.py  rerun_tf_tap.py
dimos/e2e_tests/: test_dimsim_cross_wall.py  test_dimsim_eval.py  test_dimsim_eval_parallel.py  test_dimsim_nav.py  test_simulation_module.py
dimos/hardware/: so101_arm.py
dimos/manipulation/: blueprints.py  manipulation_module.py
dimos/mapping/: costmapper.py  voxels.py
dimos/memory/: __init__.py  embedding.py  store.py  stream.py  test_embedding.py  type.py
dimos/memory2/: backend.py  conftest.py  module.py  registry.py  stream.py  test_blobstore_integration.py  test_e2e.py  test_impl.py  test_module.py  test_store.py  test_stream.py  transform.py
dimos/models/: base.py
dimos/navigation/: cmd_vel_mux.py  dimos_module_entrypoint.sh  rosnav.py  rosnav_docker.py  test_cmd_vel_mux.py
dimos/perception/: object_scene_registration.py  object_tracker_2d.py  perceive_loop_skill.py
dimos/record/: record_replay.py
dimos/robot/: all_blueprints.py  foxglove_bridge.py
dimos/simulation/: sim_blueprints.py
dimos/types/: costmap.py
dimos/utils/: change_detect.py  human.py  logging_config.py  prompt.py  reactive.py
dimos/visualization/: demo_rerun_robot_viz.py  ros_rerun_bridge.py
docker/navigation/: Dockerfile  README.md  build.sh
docs/: install_and_setup.md
docs/development/: simulation.md
docs/usage/: blueprints.md  cli.md
examples/twitch_plays/: run_odom_turns.py
hackathon/: people_monitor.py  surveillance_store.py
hackathon/notes/: STATUS.md
hackathon/tests/: test_surveillance.py
scripts/: install.sh  run_inference.py
(+211 files in other folders)
